<resources>
    <string name="app_name">Bluebells School</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bluebells School International</string>
    <string name="nav_header_subtitle">contactus@bluebellsinternational.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_about">About us</string>
    <string name="menu_view_entries">View Entries</string>
</resources>