<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="?attr/actionModeSelectAllDrawable"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@android:drawable/stat_sys_phone_call"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_view_entries"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_view_entries" />
    </group>
</menu>